<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.submittyproject.MainActivity">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/submitty_logo"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >
        <EditText
            android:id="@+id/et_username"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal"
            android:theme="@style/LoginEditText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:theme="@style/LoginEditText"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/themeColor"
        android:text="@string/login_btn"
        />
</LinearLayout>
