<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20ffffff"
    tools:context="com.example.admin.submittyproject.ui.homepage.AddPostActivity">
    <FrameLayout
        android:layout_height="330dp"
        android:layout_width="350dp"
        android:background="#fff"
        android:layout_gravity="center"
        >
        <EditText
            android:id="@+id/et_postTitle"
            android:layout_height="40dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="110dp"
            android:hint="@string/post_title"
            android:textColorHint="@color/gray"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:background="@drawable/edit_bg"
            />
        <EditText
            android:id="@+id/et_postMessage"
            android:layout_height="150dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:hint="@string/post_message"
            android:gravity="start"
            android:textColor="#000"
            android:textColorHint="@color/gray"
            android:background="@drawable/edit_bg"
            />
        <Button
            android:id="@+id/btn_post"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@color/themeColor"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/post_button"
            android:textColor="#fff"
            />
    </FrameLayout>
    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/cancel"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        />
</FrameLayout>
