<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            >
            <TextView
                android:id="@+id/tv_replyUsername"
                android:layout_height="22dp"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:textSize="17sp"
                android:text="@string/username"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/tv_replyPostTime"
                android:layout_height="22dp"
                android:layout_width="wrap_content"
                android:textColor="@color/gray"
                android:textSize="13sp"
                android:text="9/17/2018 3:18"
                android:layout_marginTop="32dp"
                android:layout_marginStart="20dp"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tv_replyBody"
            android:layout_width="340dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            android:text="@string/post_message"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:background="@color/replies_tag_bg"
        android:text="@string/post_title"
        android:layout_marginStart="20dp"
        >
        <TextView
            android:id="@+id/tv_replies"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/replies_tag_txt"
            />
    </LinearLayout>
</LinearLayout>