<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.homepage.RRepliesActivity">
    <FrameLayout android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:background="@color/themeColor"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:id="@+id/tv_backToThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Back"
            android:layout_marginStart="25dp"
            android:textColor="#fff"
            android:textSize="17sp" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/ll_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_replyToReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/reply_hint"
            android:background="@null"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_replyToReply"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_send"
            android:textColor="#fff"
            android:textSize="14sp"
            android:text="@string/reply_btn"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        >
        <TextView
            android:id="@+id/tv_replyUsername"
            android:layout_height="22dp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/username"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tv_replyPostTime"
            android:layout_height="22dp"
            android:layout_width="wrap_content"
            android:textColor="@color/gray"
            android:textSize="13sp"
            android:text="9/17/2018 3:18"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/tv_replyContent"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000"
            android:textSize="17sp"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:background="@color/lightgray"
        />
    <ListView
        android:id="@+id/lv_subreplies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>